--- a/.github/workflows/vllm-integration-tests.yaml
+++ b/.github/workflows/vllm-integration-tests.yaml
@@ -113,8 +113,8 @@ jobs:
           uv pip install pytest-json-report
 
           # newer huggingface-hub and vllm directly via pip (vs uv)
-          pip install "huggingface-hub>=0.30.0"
-          pip install "vllm>=0.9.0"
+          python3.11 -m pip install "huggingface-hub>=0.30.0"
+          python3.11 -m pip install "vllm>=0.9.0"
 
           uv run llama stack build --template remote-vllm --image-type venv
 
