--- a/.github/workflows/vllm-integration-tests.yaml
+++ b/.github/workflows/vllm-integration-tests.yaml
@@ -112,8 +112,9 @@ jobs:
           uv pip install -e .
           uv pip install pytest-json-report
 
-          # newer huggingface-hub and vllm directly via pip (vs uv)
-          python3.11 -m pip install "huggingface-hub>=0.30.0"
+          # newer huggingface-hub
+          uv lock --upgrade-package huggingface-hub
+          uv sync --all-groups
           python3.11 -m pip install "vllm>=0.9.0"
 
           uv run llama stack build --template remote-vllm --image-type venv
